src/objects/ZV_Board__c.object
<CustomObject>
    <fields>
        <fullName>Game__c</fullName>
        <label>Game</label>
        <referenceTo>ZV_Game__c</referenceTo>
        <relationshipLabel>Boards</relationshipLabel>
        <relationshipName>Boards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <defaultValue>3</defaultValue>
        <label>Height</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <defaultValue>3</defaultValue>
        <label>Width</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Board</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ZVB-{YYYY}{MM}{DD}{0000}</displayFormat>
        <label>Board Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Boards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>